# w4-d1-large-projects-with-cursor

./: .gitignore  README.md
ai-product-recommendation-system/: README.md  development_plan.md  main.py  mock_data.json  pyproject.toml  requirements.txt
ai-product-recommendation-system/app/: main.py
ai-product-recommendation-system/app/api/: auth.py  interactions.py  products.py
ai-product-recommendation-system/app/core/: config.py  database.py  security.py
ai-product-recommendation-system/app/schemas/: __init__.py  product.py  user.py  user_interaction.py
ai-product-recommendation-system/app/scripts/: load_mock_data.py
ai-product-recommendation-system/frontend/: .gitignore  index.html  package-lock.json  package.json
ai-product-recommendation-system/frontend/src/: App.tsx  main.tsx
ai-product-recommendation-system/frontend/src/components/auth/: LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx  UserProfile.tsx
ai-product-recommendation-system/frontend/src/components/common/: Navigation.tsx
ai-product-recommendation-system/frontend/src/components/products/: ProductCard.tsx  (+1 more)
ai-product-recommendation-system/frontend/src/pages/: Dashboard.tsx  Home.tsx  ProductDetailPage.tsx  ProductsPage.tsx  UserInteractionHistoryPage.tsx
ai-product-recommendation-system/frontend/src/store/: authSlice.ts  index.ts  interactionsApi.ts  productsApi.ts
ai-product-recommendation-system/frontend/src/types/: auth.ts  interaction.ts  product.ts
qa-chatbot-mcp-server/: README.md  app.py  env.example  knowledge_base.py  main.py  pyproject.toml  streamlit_app.py
